# FLORA-2

./: .gitignore  CMakeLists.txt  Contributing.md  README.md
cmake/: Dependencies.cmake
data/: README.md
docker/: .env  docker-compose.yml  readme.md
docker/px4_sitl/: Dockerfile
docs/: README.md
scripts/: convert_timestamp.py  plot_gps.py  plot_speed.py  trim_log_by_time.py
src/: CMakeLists.txt  README.md
src/app/: Config.cpp  Config.hpp  main.cpp
src/core/: Matrix.cpp  Matrix.hpp  NavProcessor.cpp  NavProcessor.hpp  Quaternion.cpp  Quaternion.hpp  TerrainProvider.cpp  TerrainProvider.hpp  Vector3D.cpp  Vector3D.hpp
src/core/types/: Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Vector3D.cpp  Vector3D.hpp
src/nav-dr/core/: DeadReckoningProcessor.cpp  DeadReckoningProcessor.hpp  IDRProcessor.hpp
src/nav-dr/sensors/: GPSData.cpp  GPSData.hpp  IMUData.cpp  IMUData.hpp  SensorData.cpp  SensorData.hpp
src/nav-of/: CMakeLists.txt  README.md  horn-schunck.cpp  horn-schunck.hpp  horn_schunck.cpp  horn_schunck.hpp  kalman_filter.cpp  kalman_filter.hpp  main-of.cpp  oprtical_flow_realtime.cpp  optical_flow_realtime.hpp  process_video.cpp  process_video.hpp  utils.cpp  utils.hpp
src/nav-of/algo/: farneback_gpu.cpp  farneback_gpu.hpp  horn_schunck.cpp  horn_schunck.hpp  kalman_filter.hpp  utils.cpp  utils.hpp
src/nav-of/app/: main-of.cpp
src/nav-of/core/: IOFProcessor.hpp  OpticalFlowProcessor.cpp  OpticalFlowProcessor.hpp
src/nav-of/include/: types.hpp
tests/: CMakeLists.txt  README.md
tests/integration/nav-dr/: SensorDataTests.cpp
tests/unit/core/: MatrixTests.cpp  QuaternionTests.cpp  Vector3DTests.cpp
tests/unit/nav-dr/sensors/: GPSDataTests.cpp  IMUDataTests.cpp
tools/: README.md
tools/airsim/: README.md  flight_controller.py  requirements.txt  run_square_flight.ps1  scenario_1.py  square_flight.py
tools/airsim/linux_scripts/: run_flight_controller.sh
tools/airsim/scenarios/: square_flight.py
tools/airsim/settings/: px4-sitl_docker.json  scenario_1.json  settings.json  simple-flight_gimbal.json
tools/airsim/utils/: camera_collector.py  imu_gps_collector.py  video_assembler.py
tools/airsim/windows_scripts/: run_flight_controller.ps1
